--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "konekt/user",
     "description": "User handling module for Laravel applications",
     "type": "library",
+    "keywords": ["laravel", "concord", "concord-module", "user"],
     "minimum-stability": "dev",
     "license": "MIT",
     "authors": [
