--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     "require-dev": {
         "monolog/monolog": "^1.22",
         "orchestra/testbench": "~3.4.2",
-        "phpunit/phpunit": "~6.2"
+        "phpunit/phpunit": "~6.2",
+        "mockery/mockery": "^1.0@dev"
     },
     "autoload-dev": {
         "psr-4": {
