--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "php": ">=7.0.0",
         "konekt/concord": "dev-master",
         "konekt/address": "dev-master",
-        "konekt/enum": "~1.2"
+        "konekt/enum": "^2.0.1"
     },
     "autoload": {
         "psr-4": { "Konekt\\User\\": "src"}
