--- a/composer.json
+++ b/composer.json
@@ -17,15 +17,15 @@
     },
     "require": {
         "php": ">=7.0.0",
-        "konekt/concord": "dev-master",
-        "konekt/address": "dev-master"
+        "konekt/concord": ">=0.9.0",
+        "konekt/address": ">=0.9.0"
     },
     "autoload": {
         "psr-4": { "Konekt\\User\\": "src"}
     },
     "require-dev": {
         "monolog/monolog": "^1.22",
-        "orchestra/testbench": "~3.4.2",
+        "orchestra/testbench": "~3.4.2|~3.5",
         "phpunit/phpunit": "~6.2",
         "mockery/mockery": "^1.0@dev"
     },
