--- a/composer.json
+++ b/composer.json
@@ -17,17 +17,17 @@
     },
     "require": {
         "php": ">=7.0.0",
-        "konekt/concord": ">=0.9.0",
-        "konekt/address": ">=0.9.0"
+        "konekt/concord": "~1.0",
+        "konekt/address": ">=0.9.7"
     },
     "autoload": {
         "psr-4": { "Konekt\\User\\": "src"}
     },
     "require-dev": {
         "monolog/monolog": "^1.22",
-        "orchestra/testbench": "~3.4.2|~3.5",
-        "phpunit/phpunit": "~6.2",
-        "mockery/mockery": "^1.0@dev"
+        "orchestra/testbench": "^3.4.2",
+        "phpunit/phpunit": "6.2 - 7.4",
+        "mockery/mockery": "^1.2"
     },
     "autoload-dev": {
         "psr-4": {
