--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ matrix:
     env: L5_VER=6
   - php: 7.1
     env: L5_VER=7
+  - php: 7.1
+    env: L5_VER=8
   - php: 7.2
     env: L5_VER=4
   - php: 7.2
@@ -20,6 +22,8 @@ matrix:
     env: L5_VER=6
   - php: 7.2
     env: L5_VER=7
+  - php: 7.2
+    env: L5_VER=8
   - php: 7.3
     env: L5_VER=4
   - php: 7.3
@@ -28,6 +32,8 @@ matrix:
     env: L5_VER=6
   - php: 7.3
     env: L5_VER=7
+  - php: 7.3
+    env: L5_VER=8
 script:
 - vendor/bin/phpunit -c phpunit.xml
 before_install:
