--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     },
     "require": {
         "php": "^7.1.3",
+        "ext-gd": "*",
         "konekt/concord": "~1.0",
         "konekt/address": ">=0.9.7"
     },
