--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ matrix:
   - php: 7.1
     env: L5_VER=4 TEST_DB_ENGINE=mysql
   - php: 7.1
-    env: L5_VER=4 TEST_DB_ENGINE=postgres
+    env: L5_VER=4 TEST_DB_ENGINE=pgsql
   - php: 7.1
     env: L5_VER=5 TEST_DB_ENGINE=mysql
   - php: 7.1
@@ -37,7 +37,7 @@ matrix:
   - php: 7.3
     env: L5_VER=8 TEST_DB_ENGINE=mysql
   - php: 7.3
-    env: L5_VER=8 TEST_DB_ENGINE=postgres
+    env: L5_VER=8 TEST_DB_ENGINE=pgsql
 script:
 - vendor/bin/phpunit -c phpunit.xml
 before_install:
