--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ matrix:
   - php: 7.1
     env: L5_VER=4 TEST_DB_ENGINE=mysql
   - php: 7.1
-    env: L5_VER=4 TEST_DB_ENGINE=pgsql
+    env: L5_VER=4 TEST_DB_ENGINE=pgsql TEST_DB_USERNAME=postgres
   - php: 7.1
     env: L5_VER=5 TEST_DB_ENGINE=mysql
   - php: 7.1
