Fully added postgres to matrix (tested against all php/laravel pairs)

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,33 +11,59 @@ matrix:
   - php: 7.1
     env: L5_VER=5 TEST_DB_ENGINE=mysql
   - php: 7.1
+    env: L5_VER=5 TEST_DB_ENGINE=pgsql TEST_DB_USERNAME=postgres
+  - php: 7.1
     env: L5_VER=6 TEST_DB_ENGINE=mysql
+  - php: 7.1
+    env: L5_VER=6 TEST_DB_ENGINE=pgsql TEST_DB_USERNAME=postgres
   - php: 7.1
     env: L5_VER=7 TEST_DB_ENGINE=mysql
   - php: 7.1
+    env: L5_VER=7 TEST_DB_ENGINE=pgsql TEST_DB_USERNAME=postgres
+  - php: 7.1
     env: L5_VER=8 TEST_DB_ENGINE=mysql
+  - php: 7.1
+    env: L5_VER=8 TEST_DB_ENGINE=pgsql TEST_DB_USERNAME=postgres
   - php: 7.2
     env: L5_VER=4 TEST_DB_ENGINE=mysql
   - php: 7.2
+    env: L5_VER=4 TEST_DB_ENGINE=pgsql TEST_DB_USERNAME=postgres
+  - php: 7.2
     env: L5_VER=5 TEST_DB_ENGINE=mysql
+  - php: 7.2
+    env: L5_VER=5 TEST_DB_ENGINE=pgsql TEST_DB_USERNAME=postgres
   - php: 7.2
     env: L5_VER=6 TEST_DB_ENGINE=mysql
   - php: 7.2
+    env: L5_VER=6 TEST_DB_ENGINE=pgsql TEST_DB_USERNAME=postgres
+  - php: 7.2
     env: L5_VER=7 TEST_DB_ENGINE=mysql
   - php: 7.2
+    env: L5_VER=7 TEST_DB_ENGINE=pgsql TEST_DB_USERNAME=postgres
+  - php: 7.2
     env: L5_VER=8 TEST_DB_ENGINE=mysql
+  - php: 7.2
+    env: L5_VER=8 TEST_DB_ENGINE=pgsql TEST_DB_USERNAME=postgres
   - php: 7.3
     env: L5_VER=4 TEST_DB_ENGINE=mysql
   - php: 7.3
+    env: L5_VER=4 TEST_DB_ENGINE=pgsql TEST_DB_USERNAME=postgres
+  - php: 7.3
     env: L5_VER=5 TEST_DB_ENGINE=mysql
+  - php: 7.3
+    env: L5_VER=5 TEST_DB_ENGINE=pgsql TEST_DB_USERNAME=postgres
   - php: 7.3
     env: L5_VER=6 TEST_DB_ENGINE=mysql
   - php: 7.3
+    env: L5_VER=6 TEST_DB_ENGINE=pgsql TEST_DB_USERNAME=postgres
+  - php: 7.3
     env: L5_VER=7 TEST_DB_ENGINE=mysql
+  - php: 7.3
+    env: L5_VER=7 TEST_DB_ENGINE=pgsql TEST_DB_USERNAME=postgres
   - php: 7.3
     env: L5_VER=8 TEST_DB_ENGINE=mysql
   - php: 7.3
-    env: L5_VER=8 TEST_DB_ENGINE=pgsql
+    env: L5_VER=8 TEST_DB_ENGINE=pgsql TEST_DB_USERNAME=postgres
 script:
 - vendor/bin/phpunit -c phpunit.xml
 before_install:
