--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "php": "^7.1.3",
         "ext-gd": "*",
         "konekt/concord": "~1.0",
-        "konekt/address": ">=0.9.7"
+        "konekt/address": ">=0.9.7",
+        "doctrine/dbal": "^2.9"
     },
     "autoload": {
         "psr-4": { "Konekt\\User\\": "src"}
