--- a/.travis.yml
+++ b/.travis.yml
@@ -65,12 +65,12 @@ matrix:
   - php: 7.3
     env: L5_VER=8 TEST_DB_ENGINE=pgsql TEST_DB_USERNAME=postgres
 script:
-- vendor/bin/phpunit
+- vendor/bin/phpunit --testdox
 before_install:
 - composer require "illuminate/support:5.${L5_VER}.*" --no-update -v
 - composer require "illuminate/console:5.${L5_VER}.*" --no-update -v
 - composer require "orchestra/testbench:3.${L5_VER}.*" --no-update -v
-- sh -c "[ ! -z $TEST_DB_ENGINE ] && [ 'mysql' = $TEST_DB_ENGINE ] && mysql -e 'CREATE DATABASE user_test;'" || true
+- sh -c "[ ! -z $TEST_DB_ENGINE ] && [ 'mysql' = $TEST_DB_ENGINE ] && mysql -e 'DROP DATABASE IF EXISTS user_test;CREATE DATABASE user_test;'" || true
 - sh -c "[ ! -z $TEST_DB_ENGINE ] && [ 'pgsql' = $TEST_DB_ENGINE ] && psql -c 'create database user_test;' -U postgres" || true
 install: composer install --no-interaction
 services:
