Converting the weird migration to use the migration-compatibility package
- Also extending travis matrix to test multiple versions
- Minor test improvements

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -20,7 +20,14 @@
         </whitelist>
     </filter>
     <php>
-        <env name="TEST_DB_USERNAME" value="root"/>
-        <env name="TEST_DB_PASSWORD" value=""/>
+<!--        FOR POSTGRES:-->
+        <!--        <env name="TEST_DB_USERNAME" value="postgres"/>-->
+        <!--        <env name="TEST_DB_PASSWORD" value="password"/>-->
+        <!--        <env name="TEST_DB_ENGINE" value="pgsql"/>-->
+
+<!--        FOR MYSQL:-->
+        <!--        <env name="TEST_DB_USERNAME" value="mysql"/>-->
+        <!--        <env name="TEST_DB_PASSWORD" value="password"/>-->
+        <!--        <env name="TEST_DB_ENGINE" value="mysql"/>-->
     </php>
 </phpunit>
