--- a/.travis.yml
+++ b/.travis.yml
@@ -4,102 +4,101 @@ cache:
   - "$HOME/.composer/cache"
 matrix:
   include:
-  - php: 7.1
-    env: L5_VER=4 TEST_DB_ENGINE=sqlite
-  - php: 7.1
-    env: L5_VER=4 TEST_DB_ENGINE=mysql
-  - php: 7.1
-    env: L5_VER=4 TEST_DB_ENGINE=pgsql
-  - php: 7.1
-    env: L5_VER=5 TEST_DB_ENGINE=sqlite
-  - php: 7.1
-    env: L5_VER=5 TEST_DB_ENGINE=mysql
-  - php: 7.1
-    env: L5_VER=5 TEST_DB_ENGINE=pgsql
-  - php: 7.1
-    env: L5_VER=6 TEST_DB_ENGINE=sqlite
-  - php: 7.1
-    env: L5_VER=6 TEST_DB_ENGINE=mysql
-  - php: 7.1
-    env: L5_VER=6 TEST_DB_ENGINE=pgsql
-  - php: 7.1
-    env: L5_VER=7 TEST_DB_ENGINE=sqlite
-  - php: 7.1
-    env: L5_VER=7 TEST_DB_ENGINE=mysql
-  - php: 7.1
-    env: L5_VER=7 TEST_DB_ENGINE=pgsql
-  - php: 7.1
-    env: L5_VER=8 TEST_DB_ENGINE=sqlite
-  - php: 7.1
-    env: L5_VER=8 TEST_DB_ENGINE=mysql
-  - php: 7.1
-    env: L5_VER=8 TEST_DB_ENGINE=pgsql
-  - php: 7.2
-    env: L5_VER=4 TEST_DB_ENGINE=sqlite
-  - php: 7.2
-    env: L5_VER=4 TEST_DB_ENGINE=mysql
-  - php: 7.2
-    env: L5_VER=4 TEST_DB_ENGINE=pgsql
-  - php: 7.2
-    env: L5_VER=5 TEST_DB_ENGINE=sqlite
-  - php: 7.2
-    env: L5_VER=5 TEST_DB_ENGINE=mysql
-  - php: 7.2
-    env: L5_VER=5 TEST_DB_ENGINE=pgsql
-  - php: 7.2
-    env: L5_VER=6 TEST_DB_ENGINE=sqlite
-  - php: 7.2
-    env: L5_VER=6 TEST_DB_ENGINE=mysql
-  - php: 7.2
-    env: L5_VER=6 TEST_DB_ENGINE=pgsql
-  - php: 7.2
-    env: L5_VER=7 TEST_DB_ENGINE=sqlite
-  - php: 7.2
-    env: L5_VER=7 TEST_DB_ENGINE=mysql
-  - php: 7.2
-    env: L5_VER=7 TEST_DB_ENGINE=pgsql
-  - php: 7.2
-    env: L5_VER=8 TEST_DB_ENGINE=sqlite
-  - php: 7.2
-    env: L5_VER=8 TEST_DB_ENGINE=mysql
-  - php: 7.2
-    env: L5_VER=8 TEST_DB_ENGINE=pgsql
-  - php: 7.3
-    env: L5_VER=4 TEST_DB_ENGINE=sqlite
-  - php: 7.3
-    env: L5_VER=4 TEST_DB_ENGINE=mysql
-  - php: 7.3
-    env: L5_VER=4 TEST_DB_ENGINE=pgsql
-  - php: 7.3
-    env: L5_VER=5 TEST_DB_ENGINE=sqlite
-  - php: 7.3
-    env: L5_VER=5 TEST_DB_ENGINE=mysql
-  - php: 7.3
-    env: L5_VER=5 TEST_DB_ENGINE=pgsql
-  - php: 7.3
-    env: L5_VER=6 TEST_DB_ENGINE=sqlite
-  - php: 7.3
-    env: L5_VER=6 TEST_DB_ENGINE=mysql
-  - php: 7.3
-    env: L5_VER=6 TEST_DB_ENGINE=pgsql
-  - php: 7.3
-    env: L5_VER=7 TEST_DB_ENGINE=sqlite
-  - php: 7.3
-    env: L5_VER=7 TEST_DB_ENGINE=mysql
-  - php: 7.3
-    env: L5_VER=7 TEST_DB_ENGINE=pgsql
-  - php: 7.3
-    env: L5_VER=8 TEST_DB_ENGINE=sqlite
-  - php: 7.3
-    env: L5_VER=8 TEST_DB_ENGINE=mysql
-  - php: 7.3
-    env: L5_VER=8 TEST_DB_ENGINE=pgsql
+#--- PHP 7.1 ---#
+    - php: 7.1
+      env: LARAVEL=5.5 TEST_DB_ENGINE=sqlite
+    - php: 7.1
+      env: LARAVEL=5.5 TEST_DB_ENGINE=mysql
+    - php: 7.1
+      env: LARAVEL=5.5 TEST_DB_ENGINE=pgsql
+    - php: 7.1
+      env: LARAVEL=5.6 TEST_DB_ENGINE=sqlite
+    - php: 7.1
+      env: LARAVEL=5.6 TEST_DB_ENGINE=mysql
+    - php: 7.1
+      env: LARAVEL=5.6 TEST_DB_ENGINE=pgsql
+    - php: 7.1
+      env: LARAVEL=5.7 TEST_DB_ENGINE=sqlite
+    - php: 7.1
+      env: LARAVEL=5.7 TEST_DB_ENGINE=mysql
+    - php: 7.1
+      env: LARAVEL=5.7 TEST_DB_ENGINE=pgsql
+    - php: 7.1
+      env: LARAVEL=5.8 TEST_DB_ENGINE=sqlite
+    - php: 7.1
+      env: LARAVEL=5.8 TEST_DB_ENGINE=mysql
+    - php: 7.1
+      env: LARAVEL=5.8 TEST_DB_ENGINE=pgsql
+#--- PHP 7.2 ---#
+    - php: 7.2
+      env: LARAVEL=5.5 TEST_DB_ENGINE=sqlite
+    - php: 7.2
+      env: LARAVEL=5.5 TEST_DB_ENGINE=mysql
+    - php: 7.2
+      env: LARAVEL=5.5 TEST_DB_ENGINE=pgsql
+    - php: 7.2
+      env: LARAVEL=5.6 TEST_DB_ENGINE=sqlite
+    - php: 7.2
+      env: LARAVEL=5.6 TEST_DB_ENGINE=mysql
+    - php: 7.2
+      env: LARAVEL=5.6 TEST_DB_ENGINE=pgsql
+    - php: 7.2
+      env: LARAVEL=5.7 TEST_DB_ENGINE=sqlite
+    - php: 7.2
+      env: LARAVEL=5.7 TEST_DB_ENGINE=mysql
+    - php: 7.2
+      env: LARAVEL=5.7 TEST_DB_ENGINE=pgsql
+    - php: 7.2
+      env: LARAVEL=5.8 TEST_DB_ENGINE=sqlite
+    - php: 7.2
+      env: LARAVEL=5.8 TEST_DB_ENGINE=mysql
+    - php: 7.2
+      env: LARAVEL=5.8 TEST_DB_ENGINE=pgsql
+    - php: 7.2
+      env: LARAVEL=6.0 TEST_DB_ENGINE=sqlite
+    - php: 7.2
+      env: LARAVEL=6.0 TEST_DB_ENGINE=mysql
+    - php: 7.2
+      env: LARAVEL=6.0 TEST_DB_ENGINE=pgsql
+#--- PHP 7.3 ---#
+    - php: 7.3
+      env: LARAVEL=5.5 TEST_DB_ENGINE=sqlite
+    - php: 7.3
+      env: LARAVEL=5.5 TEST_DB_ENGINE=pgsql
+    - php: 7.3
+      env: LARAVEL=5.5 TEST_DB_ENGINE=mysql
+    - php: 7.3
+      env: LARAVEL=5.6 TEST_DB_ENGINE=sqlite
+    - php: 7.3
+      env: LARAVEL=5.6 TEST_DB_ENGINE=pgsql
+    - php: 7.3
+      env: LARAVEL=5.6 TEST_DB_ENGINE=mysql
+    - php: 7.3
+      env: LARAVEL=5.7 TEST_DB_ENGINE=sqlite
+    - php: 7.3
+      env: LARAVEL=5.7 TEST_DB_ENGINE=pgsql
+    - php: 7.3
+      env: LARAVEL=5.7 TEST_DB_ENGINE=mysql
+    - php: 7.3
+      env: LARAVEL=5.8 TEST_DB_ENGINE=sqlite
+    - php: 7.3
+      env: LARAVEL=5.8 TEST_DB_ENGINE=pgsql
+    - php: 7.3
+      env: LARAVEL=5.8 TEST_DB_ENGINE=mysql
+    - php: 7.3
+      env: LARAVEL=6.5 TEST_DB_ENGINE=sqlite
+    - php: 7.3
+      env: LARAVEL=6.5 TEST_DB_ENGINE=pgsql
+    - php: 7.3
+      env: LARAVEL=6.5 TEST_DB_ENGINE=mysql
 script:
 - vendor/bin/phpunit --testdox
 before_install:
-- composer require "illuminate/support:5.${L5_VER}.*" --no-update -v
-- composer require "illuminate/console:5.${L5_VER}.*" --no-update -v
-- composer require "orchestra/testbench:3.${L5_VER}.*" --no-update -v
+- MINOR=`echo $LARAVEL | sed 's/[5|6]\.\([0-9]\+\)/\1/'`
+- '[[ $LARAVEL =~ ^6\.[0-9]$ ]] && MAJOR=6 || MAJOR=5'
+- '[ 6 -eq $MAJOR ] && ORCH=4 || ORCH=3'
+- composer require "illuminate/support:${MAJOR}.${MINOR}.*" --no-update -v
+- composer require "illuminate/console:${MAJOR}.${MINOR}.*" --no-update -v
 - sh -c "[ ! -z $TEST_DB_ENGINE ] && [ 'mysql' = $TEST_DB_ENGINE ] && mysql -e 'DROP DATABASE IF EXISTS user_test;CREATE DATABASE user_test;'" || true
 - sh -c "[ ! -z $TEST_DB_ENGINE ] && [ 'pgsql' = $TEST_DB_ENGINE ] && psql -c 'create database user_test;' -U postgres" || true
 install: composer install --no-interaction
