--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,9 @@
     "require": {
         "php": "^7.1.3",
         "ext-gd": "*",
-        "konekt/concord": "~1.0",
-        "konekt/address": "^1.0.1",
-        "konekt/laravel-migration-compatibility": "^1.0.1",
+        "konekt/concord": "~1.4",
+        "konekt/address": "~1.1",
+        "konekt/laravel-migration-compatibility": "~1.1",
         "doctrine/dbal": "^2.9"
     },
     "autoload": {
@@ -28,8 +28,8 @@
     },
     "require-dev": {
         "monolog/monolog": "^1.22",
-        "orchestra/testbench": "^3.4.2",
-        "phpunit/phpunit": "6.2 - 7.5",
+        "orchestra/testbench": "~3.5|~4.0",
+        "phpunit/phpunit": "6.2 - 7.5|~8.0",
         "mockery/mockery": "^1.2"
     },
     "autoload-dev": {
