--- a/composer.json
+++ b/composer.json
@@ -16,20 +16,19 @@
         "issues": "https://github.com/artkonekt/user"
     },
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.2",
         "ext-gd": "*",
-        "konekt/concord": "~1.4",
-        "konekt/address": "~1.1",
-        "konekt/laravel-migration-compatibility": "~1.1",
+        "konekt/concord": "~1.5",
+        "konekt/address": "~1.2",
+        "konekt/laravel-migration-compatibility": "~1.2",
         "doctrine/dbal": "^2.9"
     },
     "autoload": {
         "psr-4": { "Konekt\\User\\": "src"}
     },
     "require-dev": {
-        "monolog/monolog": "^1.22",
-        "orchestra/testbench": "~3.5|~4.0",
-        "phpunit/phpunit": "6.2 - 7.5|~8.0",
+        "orchestra/testbench": "~3.5|~4.0|~5.0",
+        "phpunit/phpunit": "~7.5|~8.0|~9.0",
         "mockery/mockery": "^1.2"
     },
     "autoload-dev": {
