--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     },
     "require-dev": {
         "orchestra/testbench": "~3.5|~4.0|~5.0",
-        "phpunit/phpunit": "~7.5|~8.0|~9.0",
+        "phpunit/phpunit": "6.2 - 7.5|~8.0|~9.0",
         "mockery/mockery": "^1.2"
     },
     "autoload-dev": {
