--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ env:
   - LARAVEL=7.1 TEST_DB_ENGINE=pgsql
 
 script:
-- vendor/bin/phpunit
+- vendor/bin/phpunit --testdox
 before_install:
 - MINOR=`echo $LARAVEL | sed 's/[5|6|7]\.\([0-9]\+\)/\1/'`
 - '[[ $LARAVEL =~ ^6\.[0-9]+$ ]] && MAJOR=6 || MAJOR=5'
