--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "psr-4": { "Konekt\\User\\": "src"}
     },
     "require-dev": {
-        "orchestra/testbench": "~3.5|~4.0|~5.0",
+        "orchestra/testbench": "~3.5|~4.0|~5.0|~6.0",
         "phpunit/phpunit": "6.2 - 7.5|~8.0|~9.0",
         "mockery/mockery": "^1.2"
     },
