--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "issues": "https://github.com/artkonekt/user"
     },
     "require": {
-        "php": "^7.2",
+        "php": "^7.3",
         "ext-gd": "*",
         "konekt/concord": "~1.5",
         "konekt/address": "~1.2",
@@ -29,7 +29,8 @@
     "require-dev": {
         "orchestra/testbench": "~3.5|~4.0|~5.0|~6.0",
         "phpunit/phpunit": "6.2 - 7.5|~8.0|~9.0",
-        "mockery/mockery": "^1.2"
+        "mockery/mockery": "^1.2",
+        "laravel/legacy-factories": "^1.0.4"
     },
     "autoload-dev": {
         "psr-4": {
