--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,12 @@
 language: php
 cache:
   directories:
-  - "$HOME/.composer/cache"
+    - "$HOME/.composer/cache"
 php:
   - '7.3'
   - '7.4'
 
 env:
-  - LARAVEL=5.5 TEST_DB_ENGINE=sqlite
-  - LARAVEL=5.5 TEST_DB_ENGINE=mysql
-  - LARAVEL=5.5 TEST_DB_ENGINE=pgsql
-  - LARAVEL=5.6 TEST_DB_ENGINE=sqlite
-  - LARAVEL=5.6 TEST_DB_ENGINE=mysql
-  - LARAVEL=5.6 TEST_DB_ENGINE=pgsql
-  - LARAVEL=5.7 TEST_DB_ENGINE=sqlite
-  - LARAVEL=5.7 TEST_DB_ENGINE=pgsql
-  - LARAVEL=5.7 TEST_DB_ENGINE=mysql
-  - LARAVEL=5.8 TEST_DB_ENGINE=sqlite
-  - LARAVEL=5.8 TEST_DB_ENGINE=mysql
-  - LARAVEL=5.8 TEST_DB_ENGINE=pgsql
   - LARAVEL=6.0 TEST_DB_ENGINE=sqlite
   - LARAVEL=6.0 TEST_DB_ENGINE=mysql
   - LARAVEL=6.0 TEST_DB_ENGINE=pgsql
@@ -34,23 +22,21 @@ env:
   - LARAVEL=8.0 TEST_DB_ENGINE=sqlite
   - LARAVEL=8.0 TEST_DB_ENGINE=mysql
   - LARAVEL=8.0 TEST_DB_ENGINE=pgsql
-  - LARAVEL=8.1 TEST_DB_ENGINE=sqlite
-  - LARAVEL=8.1 TEST_DB_ENGINE=mysql
-  - LARAVEL=8.1 TEST_DB_ENGINE=pgsql
-
+  - LARAVEL=8.6 TEST_DB_ENGINE=sqlite
+  - LARAVEL=8.6 TEST_DB_ENGINE=mysql
+  - LARAVEL=8.6 TEST_DB_ENGINE=pgsql
 
 script:
-- vendor/bin/phpunit --testdox
+  - vendor/bin/phpunit --testdox
 before_install:
-- MINOR=`echo $LARAVEL | sed 's/[5|6|7|8]\.\([0-9]\+\)/\1/'`
-- '[[ $LARAVEL =~ ^6\.[0-9]+$ ]] && MAJOR=6 || MAJOR=5'
-- '[[ $LARAVEL =~ ^7\.[0-9]+$ ]] && MAJOR=7 || true'
-- '[[ $LARAVEL =~ ^8\.[0-9]+$ ]] && MAJOR=8 || true'
-- echo "Testing against Laravel ${MAJOR}.${MINOR}"
-- composer require "illuminate/support:${MAJOR}.${MINOR}.*" --no-update -v
-- composer require "illuminate/console:${MAJOR}.${MINOR}.*" --no-update -v
-- sh -c "[ ! -z $TEST_DB_ENGINE ] && [ 'mysql' = $TEST_DB_ENGINE ] && mysql -e 'DROP DATABASE IF EXISTS user_test;CREATE DATABASE user_test;'" || true
-- sh -c "[ ! -z $TEST_DB_ENGINE ] && [ 'pgsql' = $TEST_DB_ENGINE ] && psql -c 'create database user_test;' -U postgres" || true
+  - MINOR=`echo $LARAVEL | sed 's/[6|7|8]\.\([0-9]\+\)/\1/'`
+  - '[[ $LARAVEL =~ ^7\.[0-9]+$ ]] && MAJOR=7 || MAJOR=6'
+  - '[[ $LARAVEL =~ ^8\.[0-9]+$ ]] && MAJOR=8 || true'
+  - echo "Testing against Laravel ${MAJOR}.${MINOR}"
+  - composer require "illuminate/support:${MAJOR}.${MINOR}.*" --no-update -v
+  - composer require "illuminate/console:${MAJOR}.${MINOR}.*" --no-update -v
+  - sh -c "[ ! -z $TEST_DB_ENGINE ] && [ 'mysql' = $TEST_DB_ENGINE ] && mysql -e 'DROP DATABASE IF EXISTS user_test;CREATE DATABASE user_test;'" || true
+  - sh -c "[ ! -z $TEST_DB_ENGINE ] && [ 'pgsql' = $TEST_DB_ENGINE ] && psql -c 'create database user_test;' -U postgres" || true
 install: composer install --no-interaction
 services:
   - mysql
