--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,9 @@
     "require": {
         "php": "^7.3",
         "ext-gd": "*",
-        "konekt/concord": "~1.5",
-        "konekt/address": "~1.2",
+        "konekt/concord": "~1.6",
+        "konekt/enum": "~3.0",
+        "konekt/address": "~2.0",
         "konekt/laravel-migration-compatibility": "~1.2",
         "doctrine/dbal": "^2.9, !=2.10.3"
     },
@@ -27,8 +28,8 @@
         "psr-4": { "Konekt\\User\\": "src"}
     },
     "require-dev": {
-        "orchestra/testbench": "~3.5|~4.0|~5.0|~6.0",
-        "phpunit/phpunit": "6.2 - 7.5|~8.0|~9.0",
+        "orchestra/testbench": "~4.0|~5.0|~6.0",
+        "phpunit/phpunit": "~8.0|~9.0",
         "mockery/mockery": "^1.2",
         "laravel/legacy-factories": "^1.0.4"
     },
