--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "issues": "https://github.com/artkonekt/user"
     },
     "require": {
-        "php": "^7.3",
+        "php": "^7.3|^8.0",
         "ext-gd": "*",
         "konekt/concord": "^1.5.1",
         "konekt/enum": "~3.0",
