Make tests gray again

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -37,17 +37,17 @@ jobs:
         run: php vendor/bin/phpunit --testdox
         env:
           TEST_DB_ENGINE: sqlite
-#      - name: Run Tests [mysql]
-#        run: php vendor/bin/phpunit --testdox
-#        env:
-#          TEST_DB_ENGINE: mysql
-#          TEST_DB_PORT: ${{ job.services.mysql.ports[3306] }}
       - name: Run Tests [postgres]
         run: php vendor/bin/phpunit --testdox
         env:
           TEST_DB_ENGINE: pgsql
           TEST_DB_PORT: ${{ job.services.postgres.ports[5432] }}
           TEST_DB_PASSWORD: postgres
+      - name: Run Tests [mysql]
+        run: php vendor/bin/phpunit --testdox
+        env:
+          TEST_DB_ENGINE: mysql
+          TEST_DB_PORT: ${{ job.services.mysql.ports[3306] }}
     services:
       mysql:
         image: mysql:5.7
