--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,13 +8,11 @@ jobs:
     timeout-minutes: 10
     strategy:
       matrix:
-        php: ['8.0', '8.1']
-        laravel: ['8.22', '8.83', '9.0', '9.30']
+        php: ['8.0', '8.1', '8.2']
+        laravel: ['9.2', '9.40']
         enum: ['3', '4']
-        exclude:
-          - php: '8.1'
-            laravel: '8.22'
-    name: PHP ${{ matrix.php }} Laravel ${{ matrix.laravel }} Enum ${{ matrix.enum }}
+        doctrine: ['2', '3']
+    name: PHP ${{ matrix.php }} Laravel ${{ matrix.laravel }} Enum ${{ matrix.enum }} DBAL ${{ matrix.doctrine }}
     steps:
       - name: Checkout
         uses: actions/checkout@master
@@ -28,6 +26,12 @@ jobs:
         run: |
           composer require "konekt/enum:${{ matrix.enum }}.*" --no-update -v
           composer require "laravel/framework:${{ matrix.laravel }}.*" --no-update -v
+          composer require "doctrine/dbal:${{ matrix.doctrine }}.*" --no-update -v
+          [[ "${{ matrix.laravel }}" < "9.32" ]] && composer req "orchestra/testbench-core:7.7.1" --no-update
+          [[ "${{ matrix.laravel }}" < "9.12" ]] && composer req "orchestra/testbench-core:7.4.0" --no-update
+          [[ "${{ matrix.laravel }}" < "9.7" ]] && composer req "orchestra/testbench-core:7.3.0" --no-update
+          [[ "${{ matrix.laravel }}" < "9.6" ]] && composer req "orchestra/testbench-core:7.2.0" --no-update
+          [[ "${{ matrix.laravel }}" < "9.5" ]] && composer req "orchestra/testbench-core:7.1.0" --no-update
       - name: Composer Install
         run: composer install --prefer-dist --no-progress --no-interaction
       - name: Create SQLite Database
