--- a/composer.json
+++ b/composer.json
@@ -22,13 +22,13 @@
         "konekt/enum": "^3.0|^4.0",
         "konekt/address": "^2.0",
         "konekt/laravel-migration-compatibility": "^1.4",
-        "doctrine/dbal": "^2.9, !=2.10.3"
+        "doctrine/dbal": "^2.13.3|^3.1.4"
     },
     "autoload": {
         "psr-4": { "Konekt\\User\\": "src"}
     },
     "require-dev": {
-        "orchestra/testbench": "^6.0|^7.0",
+        "orchestra/testbench": "^7.0",
         "phpunit/phpunit": "9 - 10",
         "mockery/mockery": "^1.2",
         "laravel/legacy-factories": "^1.0.4"
