--- a/composer.json
+++ b/composer.json
@@ -18,17 +18,18 @@
     "require": {
         "php": "^8.0",
         "ext-gd": "*",
-        "konekt/concord": "^1.10.1",
+        "konekt/concord": "^1.10.2",
         "konekt/enum": "^3.0|^4.0",
-        "konekt/address": "^2.0",
+        "konekt/address": "^2.1.2",
         "konekt/laravel-migration-compatibility": "^1.4",
+        "laravel/framework": "^9.2|^10.0",
         "doctrine/dbal": "^2.13.3|^3.1.4"
     },
     "autoload": {
         "psr-4": { "Konekt\\User\\": "src"}
     },
     "require-dev": {
-        "orchestra/testbench": "^7.0",
+        "orchestra/testbench": "^7.0|^8.0",
         "phpunit/phpunit": "9 - 10",
         "mockery/mockery": "^1.2",
         "laravel/legacy-factories": "^1.0.4"
