--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,6 +15,8 @@ jobs:
         exclude:
           - php: '8.0'
             laravel: '10.0'
+          - laravel: '10.0'
+            doctrine: '2'
     name: PHP ${{ matrix.php }} Laravel ${{ matrix.laravel }} Enum ${{ matrix.enum }} DBAL ${{ matrix.doctrine }}
     steps:
       - name: Checkout
@@ -54,14 +56,26 @@ jobs:
           TEST_DB_ENGINE: pgsql
           TEST_DB_PORT: ${{ job.services.postgres.ports[5432] }}
           TEST_DB_PASSWORD: postgres
-      - name: Run Tests [mysql]
+      - name: Run Tests [mysql 5.7]
         run: php vendor/bin/phpunit --testdox
         env:
           TEST_DB_ENGINE: mysql
           TEST_DB_PORT: ${{ job.services.mysql.ports[3306] }}
+      - name: Run Tests [mysql 8.0]
+        run: php vendor/bin/phpunit --testdox
+        env:
+          TEST_DB_ENGINE: mysql
+          TEST_DB_PORT: ${{ job.services.mysql8.ports[3306] }}
     services:
       mysql:
         image: mysql:5.7
+        env:
+          MYSQL_ALLOW_EMPTY_PASSWORD: yes
+          MYSQL_DATABASE: user_test
+        ports:
+          - 3306
+      mysql8:
+        image: mysql:8.0
         env:
           MYSQL_ALLOW_EMPTY_PASSWORD: yes
           MYSQL_DATABASE: user_test
