--- a/composer.json
+++ b/composer.json
@@ -16,22 +16,22 @@
         "issues": "https://github.com/artkonekt/user"
     },
     "require": {
-        "php": "^8.0",
+        "php": "^8.1",
         "ext-gd": "*",
-        "konekt/concord": "^1.10.2",
-        "konekt/enum": "^3.0|^4.0",
-        "konekt/address": "^2.1.2",
+        "konekt/concord": "^1.13",
+        "konekt/enum": "^4.1",
+        "konekt/address": "^3.0",
         "konekt/laravel-migration-compatibility": "^1.4",
-        "laravel/framework": "^9.2|^10.0",
-        "doctrine/dbal": "^2.13.3|^3.1.4"
+        "laravel/framework": "^10.0",
+        "doctrine/dbal": "^3.5.1"
     },
     "autoload": {
         "psr-4": { "Konekt\\User\\": "src"}
     },
     "require-dev": {
-        "orchestra/testbench": "^7.0|^8.0",
-        "phpunit/phpunit": "9 - 10",
-        "mockery/mockery": "^1.2",
+        "orchestra/testbench": "^8.0",
+        "phpunit/phpunit": "^10.0",
+        "mockery/mockery": "^1.6.2",
         "laravel/legacy-factories": "^1.0.4"
     },
     "autoload-dev": {
@@ -44,7 +44,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "3.x-dev"
+            "dev-master": "3.0.x-dev"
         }
     }
 }
