--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,14 +8,18 @@ jobs:
     timeout-minutes: 10
     strategy:
       matrix:
-        php: ['8.0', '8.1', '8.2']
-        laravel: ['9.2', '9.52', '10.0']
+        php: ['8.0', '8.1', '8.2', '8.3']
+        laravel: ['9.2', '9.52', '10.0', '10.37']
         enum: ['3', '4']
         doctrine: ['2', '3']
         exclude:
           - php: '8.0'
             laravel: '10.0'
+          - php: '8.0'
+            laravel: '10.37'
           - laravel: '10.0'
+            doctrine: '2'
+          - laravel: '10.37'
             doctrine: '2'
     name: PHP ${{ matrix.php }} Laravel ${{ matrix.laravel }} Enum ${{ matrix.enum }} DBAL ${{ matrix.doctrine }}
     steps:
