--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,23 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" bootstrap="vendor/autoload.php" backupGlobals="false" colors="true" processIsolation="false" stopOnFailure="false" xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/10.0/phpunit.xsd" cacheDirectory=".phpunit.cache" backupStaticProperties="false">
-  <coverage>
-    <include>
-      <directory suffix=".php">src/</directory>
-    </include>
-  </coverage>
-  <testsuites>
-    <testsuite name="User Module Test Suite">
-      <directory suffix="Test.php">tests</directory>
-    </testsuite>
-  </testsuites>
-  <php>
-    <!--        FOR POSTGRES:-->
-    <!--        <env name="TEST_DB_USERNAME" value="postgres"/>-->
-    <!--        <env name="TEST_DB_PASSWORD" value="password"/>-->
-    <!--        <env name="TEST_DB_ENGINE" value="pgsql"/>-->
-    <!--        FOR MYSQL:-->
-    <!--        <env name="TEST_DB_USERNAME" value="mysql"/>-->
-    <!--        <env name="TEST_DB_PASSWORD" value="password"/>-->
-    <!--        <env name="TEST_DB_ENGINE" value="mysql"/>-->
-  </php>
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" bootstrap="vendor/autoload.php" backupGlobals="false"
+         colors="true" processIsolation="false" stopOnFailure="false"
+         xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/10.0/phpunit.xsd"
+         cacheDirectory=".phpunit.cache"
+         backupStaticProperties="false"
+         stopOnError="true"
+>
+    <coverage>
+        <include>
+            <directory suffix=".php">src/</directory>
+        </include>
+    </coverage>
+    <testsuites>
+        <testsuite name="User Module Test Suite">
+            <directory suffix="Test.php">tests</directory>
+        </testsuite>
+    </testsuites>
+    <php>
+        <env name="APP_KEY" value="base64:/qYvipwG9duXRSmq4xibEeFbSKJUkWFdE94g00QiD64="/>
+        <!--        FOR POSTGRES:-->
+        <!--        <env name="TEST_DB_USERNAME" value="postgres"/>-->
+        <!--        <env name="TEST_DB_PASSWORD" value="password"/>-->
+        <!--        <env name="TEST_DB_ENGINE" value="pgsql"/>-->
+        <!--        FOR MYSQL:-->
+        <!--        <env name="TEST_DB_USERNAME" value="mysql"/>-->
+        <!--        <env name="TEST_DB_PASSWORD" value="password"/>-->
+        <!--        <env name="TEST_DB_ENGINE" value="mysql"/>-->
+    </php>
 </phpunit>
