--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,10 +9,12 @@ jobs:
     strategy:
       matrix:
         php: ['8.1', '8.2', '8.3']
-        laravel: ['10.0', '10.48', '11.0']
+        laravel: ['10.0', '10.48', '11.0', '11.5']
         exclude:
           - php: '8.1'
             laravel: '11.0'
+          - php: '8.1'
+            laravel: '11.5'
     name: PHP ${{ matrix.php }} Laravel ${{ matrix.laravel }}
     steps:
       - name: Checkout
