--- a/composer.json
+++ b/composer.json
@@ -22,15 +22,15 @@
         "konekt/enum": "^4.1",
         "konekt/address": "^3.0",
         "konekt/laravel-migration-compatibility": "^1.4",
-        "laravel/framework": "^10.0|^11.0",
+        "laravel/framework": "^10.0|^11.0|^12.0",
         "doctrine/dbal": "^3.5.1|^4.0"
     },
     "autoload": {
         "psr-4": { "Konekt\\User\\": "src"}
     },
     "require-dev": {
-        "orchestra/testbench": "^8.0|^9.0",
-        "phpunit/phpunit": "^10.0",
+        "orchestra/testbench": "^8.0|^9.0|^10.0",
+        "phpunit/phpunit": "^10.0|^11.0",
         "mockery/mockery": "^1.6.2"
     },
     "autoload-dev": {
